# appointment-schedule

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/actions/: __init__.py  base.py  schedule.py
app/api/: __init__.py
app/api/V1/: __init__.py  schedule.py
app/core/: config.py  db.py
app/core/actions/: __init__.py  base.py
app/core/api/: __init__.py
app/core/database/: db.py  init.sql  sqlserver.py
app/core/models/: base.py
app/core/schemas/: base.py
app/core/settings/: config.py
app/crm/service/: users_crm_id.py
app/models/: base.py  response.py  tables.py
app/schedule/actions/: schedule.py
app/schedule/api/V1/: schedule.py
app/schedule/models/: tables.py
app/schedule/schemas/: schedule.py
app/schemas/: base.py  schedule.py
app/users/: __ini__.py
app/users/actions/: permission_user.py  permissions.py  users.py
app/users/api/V1/: __init__.py  permissions.py  users.py
app/users/models/: permissions.py  users.py
app/users/routes/: __init__.py  permissions.py  users.py
app/users/schemas/: permission_user.py  permissions.py  users.py
app/utils/: response.py
