[tool.poetry]
name = "fastapi-sqlalchemy-alembic"
version = "0.1.0"
description = ""
authors = ["Bruno Oliveira <bruoli3@qyon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = {extras = ["srv"], version = "^4.5.0"}
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
python-jose = "^3.3.0"
pyodbc = "^4.0.39"
pydantic-settings = "^2.0.3"
mysql-connector-python = "^8.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
beanie = "^1.21.0"
mysqlclient = "^2.2.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
greenlet = "^2.0.2"
pyhumps = "^3.8.0"
alembic = "^1.12.0"
asyncmy = "^0.2.8"
cryptography = "^41.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
mypy = "^1.5.1"
sqlalchemy-stubs = "^0.4"
flake8 = "^6.1.0"
autoflake = "^2.2.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
